--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
 
     <string name="error_title">An error has occurred</string>
 
-    <string name="notbound_service_title">Bind to a LAM module</string>
+    <string name="not_bound_service_title">Bind to a LAM module</string>
+    <string name="not_bound_package_instructions">Enter the LAM package name, it can be usually found in <b>"Settings > Applications"</b> or check the <i>"AndroidManifest.xml"</i> in the LAM module source code</string>
+    <string name="not_bound_package_placeholder">LAM package</string>
+    <string name="not_bound_try_bind">Try to bind service</string>
+
     <string name="bound_service_title">Connected to a LAM module</string>
 </resources>
