Added dynamic icons and splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,16 @@
 <resources>
     <string name="app_name">Leishmaniapp LAM Debugger</string>
     <string name="app_description">Leishmaniapp Local Analysis Model (LAM) debugger</string>
+    <string name="app_detail">This application binds services in the (com.leishmaniapp.lam.&lt;disease&gt;) package with an Intent with the (com.leishmaniapp.lam.ACTION_ANALYZE) action</string>
 
     <string name="action_ok">OK</string>
+    <string name="error_title">An error has occurred</string>
 
     <string name="loading_title">Operation in progress</string>
     <string name="loading_content">Wait until the current operation is completed</string>
     <string name="loading_lam">Binding with the LAM module…</string>
 
-    <string name="error_title">An error has occurred</string>
-
-    <string name="not_bound_service_title">Bind to a LAM module</string>
-    <string name="not_bound_package_instructions">Enter the LAM package name, it can be usually found in <b>"Settings > Applications"</b> or check the <i>"AndroidManifest.xml"</i> in the LAM module source code</string>
-    <string name="not_bound_package_placeholder">LAM package</string>
+    <string name="not_bound_model_placeholder">Enter the disease/model id</string>
     <string name="not_bound_try_bind">Try to bind service</string>
 
     <string name="bound_service_title">Connected to a LAM module</string>
