--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,11 @@
     <string name="app_detail">This application binds services in the (com.leishmaniapp.lam.&lt;disease&gt;) package with an Intent with the (com.leishmaniapp.lam.ACTION_ANALYZE) action</string>
 
     <string name="action_ok">OK</string>
+    <string name="action_disconnect">Disconnect</string>
+    <string name="action_pick">Pick an image sample</string>
+
     <string name="error_title">An error has occurred</string>
+    <string name="error_unknown">Unknown error</string>
 
     <string name="loading_title">Operation in progress</string>
     <string name="loading_content">Wait until the current operation is completed</string>
