--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_ok">OK</string>
     <string name="action_disconnect">Disconnect</string>
     <string name="action_pick">Pick an image sample</string>
+    <string name="action_new_request">Dismiss results and start new request</string>
 
     <string name="error_title">An error has occurred</string>
     <string name="error_unknown">Unknown error</string>
@@ -18,4 +19,12 @@
     <string name="not_bound_try_bind">Try to bind service</string>
 
     <string name="bound_service_title">Connected to a LAM module</string>
+    <string name="bound_service_no_file">No file selected</string>
+    <string name="bound_service_input_diagnosis">Diagnosis UUID</string>
+    <string name="bound_service_input_sample">Sample Number</string>
+    <string name="bound_service_analyze">Start analysis</string>
+    <string name="bound_service_refresh">Generate</string>
+    <string name="bound_service_image_title">Select an image</string>
+    <string name="bound_service_metadata_title">Fill metadata</string>
+    <string name="bound_service_results">Analysis model results</string>
 </resources>
